<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Gaonic</string>
    <string name="action_settings">Settings</string>
    <string name="action_about">About</string>
    <string name="action_quit">Quit</string>
    <string name="action_search_things">Search Things</string>
    <string name="action_attach_new_thing">Attach New Thing</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_attach">Attach</string>
    <string name="action_search">Search</string>
    <string name="title_my_things">MY THINGS</string>
    <string name="action_modify_preferences">Modify your settings</string>
    <string name="empty"></string>
    <string name="title_nearby_things">NEARBY</string>
    <string name="title_all">ALL</string>
    <string name="subtitle_all">Attached and nearby sensors</string>
    <string name="subtitle_my_things">Attached sensors</string>
    <string name="subtitle_nearby_things">Sensors Near you</string>
    <string name="map_progress_loading">Loading&#8230;</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="title_activity_about">About US</string>
    <string name="action_website"><a href="http:/www.gaonic.com">Visit our website</a></string>
	<string name="action_email"><a href="mailto:info@gaonic.com">Drop us an Email</a></string>
	<string name="action_facebook"><a href="https://www.facebook.com/GaonicLtd">Connect with us On facebook!</a></string>
  	<string name="action_twitter"><a href="https://twitter.com/GaonicLtd">Follow us on Twitter</a></string>
	
</resources>
