<menu xmlns:android="http://schemas.android.com/apk/res/android" >

      <item
        android:id="@+id/action_attach_thing"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:icon="@drawable/ic_attach"
        android:title="@string/action_attach_new_thing"/>
      
       <item
        android:id="@+id/action_search_things"
        android:orderInCategory="100"
        android:actionViewClass="com.actionbarsherlock.widget.SearchView"
  	  	android:icon="@drawable/ic_action_search"
        android:showAsAction="always|collapseActionView"
        android:title="@string/action_search_things"/>
       
    	<item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:icon="@drawable/ic_action_settings"
        android:title="@string/action_settings"/>
    
    	<item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:icon="@drawable/ic_action_about"
        android:title="@string/action_about"/>
    	
    	<item
        android:id="@+id/action_quit"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:icon="@drawable/ic_session_quit"
        android:title="@string/action_quit"/>
    

</menu>
